# gitlogue

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  installation.md  usage.md
examples/: test_highlighter.rs
src/: animation.rs  config.rs  git.rs  main.rs  theme.rs  ui.rs
src/syntax/: mod.rs
src/syntax/languages/: c.rs  clojure.rs  cpp.rs  csharp.rs  css.rs  dart.rs  elixir.rs  erlang.rs  go_lang.rs  haskell.rs  html.rs  java.rs  javascript.rs  json.rs  kotlin.rs  lua.rs  markdown.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  typescript.rs  xml.rs  yaml.rs  zig.rs
src/syntax/languages/queries/: dart_highlights.scm  kotlin_highlights.scm  typescript_highlights.scm
