[package]
name = "gitlogue"
version = "0.4.1"
edition = "2021"
authors = ["unhappychoice"]
description = "A Git history screensaver - watch your code rewrite itself"
license = "ISC"
repository = "https://github.com/unhappychoice/gitlogue"

exclude = [
    "*.png",
    "*.gif",
    "*.jpg",
    "*.jpeg",
    "*.mp4",
    "docs/",
    "examples/",
    ".github/",
    "Formula/",
    "about.toml",
    "about.hbs",
    "generate_changelog.sh",
    "install.sh",
]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
chrono-english = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ctrlc = { version = "3.4", features = ["termination"] }
dirs = "6.0"
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }
globset = "0.4"
rand = "0.9"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
streaming-iterator = "0.1"
toml = "0.9"
toml_edit = "0.23"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-clojure = "0.1"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-dart = "0.0.4"
tree-sitter-elixir = "0.3"
tree-sitter-erlang = "0.15"
tree-sitter-go = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-kotlin-ng = "1.0"
tree-sitter-lua = "0.2"
tree-sitter-md = "0.5"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-xml = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-zig = "1.0"
unicode-width = "0.2"

[lib]
name = "gitlogue"
path = "src/lib.rs"

[[bin]]
name = "gitlogue"
path = "src/main.rs"


[[example]]
name = "test_highlighter"
path = "examples/test_highlighter.rs"
